--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,7 @@ const year = date.getFullYear();
 
           <div class="item community">
             <div class="item-title">社媒</div>
-            <a href="https://twitter.com/austinit" target="_blank">Twitter</a>
+            <a href="https://twitter.com/jrfank8888" target="_blank">Twitter</a>
             <a href="https://github.com/austin2035" target="_blank">Github</a>
             <a href="https://t.me/austin2035" target="_blank">Telegram</a>
           </div>
@@ -40,7 +40,7 @@ const year = date.getFullYear();
       <div class="bottom">
         <div class="copyright">
           &copy; {`${year} ${SITE_NAME}`} 
-          <a href="//github.com/austin2035/astro-air-blog">Astro-air-blog</a>
+          <a href="//github.com/austin2035/astro-air-blog">JR-Fank</a>
         </div>
       </div>
     </div>
