--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,14 +25,12 @@ const year = date.getFullYear();
           <div class="item community">
             <div class="item-title">社媒</div>
             <a href="https://twitter.com/jrfank8888" target="_blank">Twitter</a>
-            <a href="https://github.com/austin2035" target="_blank">Github</a>
-            <a href="https://t.me/austin2035" target="_blank">Telegram</a>
+            <a href="https://t.me/jrfank_bot" target="_blank">Telegram</a>
           </div>
           
           <div class="item resources">
             <div class="item-title">友链</div>
-            <a href="https://the.top" target="_blank">THE.TOP</a>
-            <a href="https://yufengbiji.com" target="_blank">驭风笔记</a>
+            <a href="https://csl.jrfank.cc" target="_blank">Alist</a>
           </div>
 
         </div>
