--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -38,7 +38,7 @@ const year = date.getFullYear();
       <div class="bottom">
         <div class="copyright">
           &copy; {`${year} ${SITE_NAME}`} 
-          <a href="//github.com/austin2035/astro-air-blog">JR-Fank</a>
+          <a href="//jrfank.cc">JR-Fank</a>
         </div>
       </div>
     </div>
