--- a/src/pages/archive.astro
+++ b/src/pages/archive.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import ArchivePostList from "../layouts/ArchivePostList.astro";
 const allPosts = await Astro.glob("./posts/*.md");
-const tags = ["测评", "待定", "待定"];
+const tags = ["测评", "摄影", "待定"];
 const posts = [];
 
 tags.forEach((tag) => {
