--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,6 +31,7 @@ const year = date.getFullYear();
           <div class="item resources">
             <div class="item-title">友链</div>
             <a href="https://csl.jrfank.cc" target="_blank">Alist</a>
+            <a href="https://github.com/austin2035" target="_blank">Github</a>
           </div>
 
         </div>
