--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,14 +17,20 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </div>
 
       <div class="archive-tag">
-        <h2 class="tag-header">关注我</h2>
+        <h2 class="tag-header">联系我</h2>
         <div class="tag-post-list">
           <ul>
             <li>
-              <a href="https://twitter.com/austinit" target="_blank"> Twitter</a>
+              <a href="https://twitter.com/JRFank8888" target="_blank"> Twitter</a>
             </li>
             <li>
-              <a href="https://github.com/austin2035" target="_blank">Github</a>
+              <a href="https://t.me/jrfank_bot" target="_blank">Telegram</a>
+            </li>
+            <li>
+              <a href="https://youtube.com/@jr-fank1119?si=TrE6X2hg-CqeLBzz" target="_blank">YouTube</a>
+            </li>
+            <li>
+              <a href="https://b23.tv/VFTxSD3" target="_blank">Bilibili</a>
             </li>
           </ul>
         </div>
