--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,8 +20,10 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         <h2 class="tag-header">联系我</h2>
         <div class="tag-post-list">
           <ul>
-            <li>
-              <a href="https://twitter.com/JRFank8888" target="_blank"> Twitter</a>
+           <li>
+              <a href="https://twitter.com/JRFank8888" target="_blank">
+              <i class="fab fa-twitter"></i> Twitter
+              </a>
             </li>
             <li>
               <a href="https://t.me/jrfank_bot" target="_blank">Telegram</a>
