--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,9 +21,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         <div class="tag-post-list">
           <ul>
            <li>
-              <a href="https://twitter.com/JRFank8888" target="_blank">
-                <i class="fab fa-twitter"></i> Twitter
-              </a>
+              <a href="https://twitter.com/JRFank8888" target="_blank">Twitter</a>
             </li>
             <li>
               <a href="https://t.me/jrfank_bot" target="_blank">Telegram</a>
