--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,6 +21,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         <div class="tag-post-list">
           <ul>
            <li>
+              <i class="fab fa-twitter"></i> 
               <a href="https://twitter.com/JRFank8888" target="_blank">Twitter</a>
             </li>
             <li>
