--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,5 +3,6 @@ import Navigation from "./Navigation.astro";
 ---
 
 <header>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <Navigation />
 </header>
