--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,9 +23,12 @@ import BaseLayout from "../layouts/BaseLayout.astro";
            <li>
               <a href="https://twitter.com/JRFank8888" target="_blank">
                 <i class="fab fa-twitter"></i> Twitter
+              </a>
             </li>
             <li>
-              <a href="https://t.me/jrfank_bot" target="_blank">Telegram</a>
+              <a href="https://t.me/jrfank_bot" target="_blank">
+                <i class="fab fa-telegram"></i> Telegram
+              </a>
             </li>
             <li>
               <a href="https://youtube.com/@jr-fank1119?si=TrE6X2hg-CqeLBzz" target="_blank">YouTube</a>
