--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -31,10 +31,14 @@ import BaseLayout from "../layouts/BaseLayout.astro";
               </a>
             </li>
             <li>
-              <a href="https://youtube.com/@jr-fank1119?si=TrE6X2hg-CqeLBzz" target="_blank">YouTube</a>
+              <a href="https://youtube.com/@jr-fank1119?si=TrE6X2hg-CqeLBzz" target="_blank">
+                <i class="fab fa-youtube"></i> YouTube
+             </a>
             </li>
             <li>
-              <a href="https://b23.tv/VFTxSD3" target="_blank">Bilibili</a>
+              <a href="https://b23.tv/VFTxSD3" target="_blank">
+                <i class="fab fa-bilibili"></i> Bilibili
+             </a>
             </li>
           </ul>
         </div>
