--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,6 +16,17 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </div>
       </div>
 
+      <style>
+        .archive-tag ul {
+          list-style: none; /* 移除默认的列表样式，即点 */
+          padding: 0; /* 移除列表项的内边距 */
+        }
+
+        .archive-tag li {
+          margin-bottom: 10px; /* 添加一些底部间距以分隔链接项 */
+        }
+      </style>
+
       <div class="archive-tag">
         <h2 class="tag-header">联系我</h2>
         <div class="tag-post-list">
