--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,4 +46,10 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
     </div>
   </section>
+  <style>
+    .archive-tag ul {
+      list-style: none; /* 去掉列表前面的点 */
+      padding-left: 0; /* 去掉列表的左内边距 */
+    }
+  </style>
 </BaseLayout>
