--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,11 +33,11 @@ import BaseLayout from "../layouts/BaseLayout.astro";
             <li>
               <a href="https://youtube.com/@jr-fank1119?si=TrE6X2hg-CqeLBzz" target="_blank">
                 <i class="fab fa-youtube"></i> YouTube
-             </a>
+              </a>
             </li>
             <li>
               <a href="https://b23.tv/VFTxSD3" target="_blank">
-                <i class="fab fa-clapperboard"></i> Bilibili
+                <i class="fab fa-play"></i> Bilibili
               </a>
             </li>
           </ul>
