--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -51,5 +51,11 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       list-style: none; /* 去掉列表前面的点 */
       padding-left: 0; /* 去掉列表的左内边距 */
     }
+
+    .archive-tag a {
+      display: flex; /* 使用 Flex 布局以实现图标和文本左对齐 */
+      align-items: center; /* 垂直居中对齐图标和文本 */
+      text-decoration: none; /* 去掉链接的下划线 */
+    }
   </style>
 </BaseLayout>
