--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -25,19 +25,19 @@ import BaseLayout from "../layouts/BaseLayout.astro";
                 <i class="fab fa-twitter"></i> Twitter
               </a>
             </li>
-            <li>
+            <li class="list-item-icon">
               <a href="https://t.me/jrfank_bot" target="_blank">
                 <i class="fab fa-telegram"></i> Telegram
               </a>
             </li>
-            <li>
+            <li class="list-item-icon">
               <a href="https://youtube.com/@jr-fank1119?si=TrE6X2hg-CqeLBzz" target="_blank">
                 <i class="fab fa-youtube"></i> YouTube
               </a>
             </li>
-            <li>
+            <li class="list-item-icon">
               <a href="https://b23.tv/VFTxSD3" target="_blank">
-                <i class="fab fa-play"></i> Bilibili
+                <i class="fab-solid fa-play"></i> Bilibili
               </a>
             </li>
           </ul>
