--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,7 +37,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
             </li>
             <li class="list-item-icon">
               <a href="https://b23.tv/VFTxSD3" target="_blank">
-                <i class="fab fa-mail"></i> Bilibili
+                <i class="fab fa-emvelope"></i> Bilibili
               </a>
             </li>
           </ul>
