--- a/src/layouts/MarkdownPost.astro
+++ b/src/layouts/MarkdownPost.astro
@@ -56,7 +56,7 @@ const dateFormated = formatDate(pubDate);
           <div class="component">
             <div class="component-content">
               <div class="article-copyright">
-                <a class="content">版权声明：自由转载-非商用-非衍生-保持署名（创意共享3.0许可证）</a>
+                <a class="content">版权声明：不允许转载-原创（所有权归作者所属）</a>
                 <p class="content">作者： {frontmatter.author} 发表日期：{dateFormated}</p>
               </div>
             </div>
