--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@ const year = date.getFullYear();
           <div class="item products">
             <div class="item-title">作品</div>
             <a href="/" target="_blank">本站博客</a>
-            <a href="https://the.top" target="_blank">TOP Link</a> 
+            <a href="https://the.top/jrfank" target="_blank">TOP Link</a> 
           </div>
 
           <div class="item community">
